# hft-llvm

./: CMakeLists.txt  README.md  build.sh  hft_engine.cpp  hft_engine_baseline  hft_project_spec.md  orderbook.ll  orderbook.prof.bc  orderbook_inst  run_all.sh  run_atomic.sh  run_branch.sh  run_cpp.sh  run_hft.sh  run_split.sh  split_struct.cpp  test.c  test.ll
benchmarks/hft/: correct_output  fplicm_output  orderbook  orderbook.baseline.ll  orderbook.cpp  orderbook.hft-branchless.ll  orderbook.hft-opt.ll  orderbook.hft-prefetch.ll  orderbook.ll  orderbook.optimized.ll  orderbook.split.cpp  orderbook.split_baseline  orderbook_baseline  orderbook_hft-atomic-elision  orderbook_hft-branchless  orderbook_hft-hotcold  orderbook_hft-opt  orderbook_hft-prefetch  orderbook_hft-print  orderbook_hft-split
hft_atomic/: CMakeLists.txt  hft_atomic.cpp
hft_branch/: CMakeLists.txt  hft_branch.cpp
hft_instrumentation/: CMakeLists.txt  InstrumentationPass.cpp
hft_split/: CMakeLists.txt  hft_split.cpp
hftpass/: CMakeLists.txt  hftpass.cpp
hw2pass/: hw2pass.cpp
